Updated tutum configuration.